kubernetes/apps/kubeflow/kubeflow-pipelines/app/patches/cache-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-server
  namespace: kubeflow
spec:
  template:
    spec:
      containers:
        - name: server
