kubernetes/apps/kubeflow/kubeflow-pipelines/app/patches/delete-metadata-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-postgres-db
  namespace: kubeflow
$patch: delete
