kubernetes/apps/kubeflow/kubeflow-pipelines/app/patches/delete-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: kubeflow
$patch: delete
