kubernetes/apps/kubeflow/kubeflow-pipelines/app/patches/delete-seaweedfs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seaweedfs
  namespace: kubeflow
$patch: delete
