kubernetes/apps/kubeflow/kubeflow-pipelines/app/patches/metadata-grpc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-grpc-deployment
  namespace: kubeflow
spec:
  template:
    spec:
      containers:
        - name: container
