kubernetes/apps/kubeflow/kubeflow-pipelines/app/patches/delete-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: kubeflow
$patch: delete
