kubernetes/apps/kubeflow/kubeflow-pipelines/app/patches/delete-seaweedfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seaweedfs
  namespace: kubeflow
$patch: delete
