kubernetes/apps/kubeflow/kubeflow-pipelines/app/patches/delete-seaweedfs-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: seaweedfs
  namespace: kubeflow
$patch: delete
