kubernetes/apps/kubeflow/kubeflow-pipelines/app/patches/cert-manager-mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pipelineversions.pipelines.kubeflow.org
  annotations:
    cert-manager.io/inject-ca-from: kubeflow/kfp-api-webhook-cert
