kubernetes/apps/kubeflow/kubeflow-pipelines/app/patches/cert-manager-validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: pipelineversions.pipelines.kubeflow.org
  annotations:
    cert-manager.io/inject-ca-from: kubeflow/kfp-api-webhook-cert
